@@ -3047,6 +3047,13 @@ specifier|private
 name|int
 name|docFreq
 decl_stmt|;
+DECL|field|matchingSegments
+specifier|final
+name|SegmentMergeInfo
+index|[]
+name|matchingSegments
+decl_stmt|;
+comment|// null terminated array of matching segments
 DECL|method|MultiTermEnum
 specifier|public
 name|MultiTermEnum
@@ -3074,6 +3081,18 @@ name|readers
 operator|.
 name|length
 argument_list|)
+expr_stmt|;
+name|matchingSegments
+operator|=
+operator|new
+name|SegmentMergeInfo
+index|[
+name|readers
+operator|.
+name|length
+operator|+
+literal|1
+index|]
 expr_stmt|;
 for|for
 control|(
@@ -3144,6 +3163,12 @@ argument_list|,
 name|reader
 argument_list|)
 decl_stmt|;
+name|smi
+operator|.
+name|ord
+operator|=
+name|i
+expr_stmt|;
 if|if
 condition|(
 name|t
@@ -3204,6 +3229,72 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|matchingSegments
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|SegmentMergeInfo
+name|smi
+init|=
+name|matchingSegments
+index|[
+name|i
+index|]
+decl_stmt|;
+if|if
+condition|(
+name|smi
+operator|==
+literal|null
+condition|)
+break|break;
+if|if
+condition|(
+name|smi
+operator|.
+name|next
+argument_list|()
+condition|)
+name|queue
+operator|.
+name|put
+argument_list|(
+name|smi
+argument_list|)
+expr_stmt|;
+else|else
+name|smi
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+comment|// done with segment
+block|}
+name|int
+name|numMatchingSegments
+init|=
+literal|0
+decl_stmt|;
+name|matchingSegments
+index|[
+literal|0
+index|]
+operator|=
+literal|null
+expr_stmt|;
 name|SegmentMergeInfo
 name|top
 init|=
@@ -3258,6 +3349,14 @@ operator|==
 literal|0
 condition|)
 block|{
+name|matchingSegments
+index|[
+name|numMatchingSegments
+operator|++
+index|]
+operator|=
+name|top
+expr_stmt|;
 name|queue
 operator|.
 name|pop
@@ -3273,28 +3372,6 @@ name|docFreq
 argument_list|()
 expr_stmt|;
 comment|// increment freq
-if|if
-condition|(
-name|top
-operator|.
-name|next
-argument_list|()
-condition|)
-name|queue
-operator|.
-name|put
-argument_list|(
-name|top
-argument_list|)
-expr_stmt|;
-comment|// restore queue
-else|else
-name|top
-operator|.
-name|close
-argument_list|()
-expr_stmt|;
-comment|// done with a segment
 name|top
 operator|=
 operator|(
@@ -3306,6 +3383,13 @@ name|top
 argument_list|()
 expr_stmt|;
 block|}
+name|matchingSegments
+index|[
+name|numMatchingSegments
+index|]
+operator|=
+literal|null
+expr_stmt|;
 return|return
 literal|true
 return|;
@@ -3395,6 +3479,22 @@ name|TermDocs
 name|current
 decl_stmt|;
 comment|// == readerTermDocs[pointer]
+DECL|field|tenum
+specifier|private
+name|MultiTermEnum
+name|tenum
+decl_stmt|;
+comment|// the term enum used for seeking... can be null
+DECL|field|matchingSegmentPos
+name|int
+name|matchingSegmentPos
+decl_stmt|;
+comment|// position into the matching segments from tenum
+DECL|field|smi
+name|SegmentMergeInfo
+name|smi
+decl_stmt|;
+comment|// current segment mere info... can be null
 DECL|method|MultiTermDocs
 specifier|public
 name|MultiTermDocs
@@ -3488,6 +3588,24 @@ name|current
 operator|=
 literal|null
 expr_stmt|;
+name|this
+operator|.
+name|tenum
+operator|=
+literal|null
+expr_stmt|;
+name|this
+operator|.
+name|smi
+operator|=
+literal|null
+expr_stmt|;
+name|this
+operator|.
+name|matchingSegmentPos
+operator|=
+literal|0
+expr_stmt|;
 block|}
 DECL|method|seek
 specifier|public
@@ -3508,6 +3626,23 @@ name|term
 argument_list|()
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|termEnum
+operator|instanceof
+name|MultiTermEnum
+condition|)
+block|{
+name|this
+operator|.
+name|tenum
+operator|=
+operator|(
+name|MultiTermEnum
+operator|)
+name|termEnum
+expr_stmt|;
+block|}
 block|}
 DECL|method|next
 specifier|public
@@ -3549,6 +3684,47 @@ operator|.
 name|length
 condition|)
 block|{
+if|if
+condition|(
+name|tenum
+operator|!=
+literal|null
+condition|)
+block|{
+name|smi
+operator|=
+name|tenum
+operator|.
+name|matchingSegments
+index|[
+name|matchingSegmentPos
+operator|++
+index|]
+expr_stmt|;
+if|if
+condition|(
+name|smi
+operator|==
+literal|null
+condition|)
+block|{
+name|pointer
+operator|=
+name|readers
+operator|.
+name|length
+expr_stmt|;
+return|return
+literal|false
+return|;
+block|}
+name|pointer
+operator|=
+name|smi
+operator|.
+name|ord
+expr_stmt|;
+block|}
 name|base
 operator|=
 name|starts
@@ -3614,6 +3790,47 @@ name|length
 condition|)
 block|{
 comment|// try next segment
+if|if
+condition|(
+name|tenum
+operator|!=
+literal|null
+condition|)
+block|{
+name|smi
+operator|=
+name|tenum
+operator|.
+name|matchingSegments
+index|[
+name|matchingSegmentPos
+operator|++
+index|]
+expr_stmt|;
+if|if
+condition|(
+name|smi
+operator|==
+literal|null
+condition|)
+block|{
+name|pointer
+operator|=
+name|readers
+operator|.
+name|length
+expr_stmt|;
+return|return
+literal|0
+return|;
+block|}
+name|pointer
+operator|=
+name|smi
+operator|.
+name|ord
+expr_stmt|;
+block|}
 name|base
 operator|=
 name|starts
@@ -3747,6 +3964,48 @@ operator|.
 name|length
 condition|)
 block|{
+if|if
+condition|(
+name|tenum
+operator|!=
+literal|null
+condition|)
+block|{
+name|SegmentMergeInfo
+name|smi
+init|=
+name|tenum
+operator|.
+name|matchingSegments
+index|[
+name|matchingSegmentPos
+operator|++
+index|]
+decl_stmt|;
+if|if
+condition|(
+name|smi
+operator|==
+literal|null
+condition|)
+block|{
+name|pointer
+operator|=
+name|readers
+operator|.
+name|length
+expr_stmt|;
+return|return
+literal|false
+return|;
+block|}
+name|pointer
+operator|=
+name|smi
+operator|.
+name|ord
+expr_stmt|;
+block|}
 name|base
 operator|=
 name|starts
@@ -3809,6 +4068,49 @@ name|i
 index|]
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|smi
+operator|!=
+literal|null
+condition|)
+block|{
+assert|assert
+operator|(
+name|smi
+operator|.
+name|ord
+operator|==
+name|i
+operator|)
+assert|;
+assert|assert
+operator|(
+name|smi
+operator|.
+name|termEnum
+operator|.
+name|term
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+name|term
+argument_list|)
+operator|)
+assert|;
+name|result
+operator|.
+name|seek
+argument_list|(
+name|smi
+operator|.
+name|termEnum
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
 name|result
 operator|.
 name|seek
@@ -3816,6 +4118,7 @@ argument_list|(
 name|term
 argument_list|)
 expr_stmt|;
+block|}
 return|return
 name|result
 return|;
